Fix fullscreen functionality. Should work on IE8.

--- a/src/sass/mediaelement-playlist-plugin.scss
+++ b/src/sass/mediaelement-playlist-plugin.scss
@@ -231,3 +231,18 @@
 		}
 	}
 }
+
+body.manual-fullscreen {
+  overflow: hidden;
+}
+
+body.manual-fullscreen .mejs-container.manual-fullscreen {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
